Fix: travis.yml arreglado

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ install:
   - pip install codacy-coverage
 script:
   - cd decide
-  - coverage run --branch --source=. ./manage.py test --keepdb --with-xunit
-  - coverage xml
-  - python-codacy-coverage -r coverage.xml
+  - ./manage.py test census --keepdb 
+notifications:
+  email:
+    recipients:
+      -ferromrio@alum.us.es
